package ch.uzh.group8.checkersv3.dom;

public record Piece(Player owner, boolean isKing) {}
