package ch.uzh.group8.checkersv3.dom.board;

interface Command {
  void execute();

  void undo();
}
